# Miner-weeper

./: CMakeLists.txt  README.md
miner-weeper/: Miner weeper.cpp  Miner weeper.hpp  MinerWeeper.cpp  MinerWeeper.hpp  main.cpp
miner-weeper.xcodeproj/: project.pbxproj
miner-weeper.xcodeproj/xcuserdata/fedorshevtsev.xcuserdatad/xcschemes/: xcschememanagement.plist
